tabs spacing issue fixed; dropdown positioning; modal color variants;

--- a/css/colors.scss
+++ b/css/colors.scss
@@ -31,3 +31,7 @@ body {
 .default-bg {
   background: var(--divider);
 }
+
+.info-bg {
+  background: var(--accent-color);
+}
