--- a/css/dropdown.scss
+++ b/css/dropdown.scss
@@ -14,6 +14,20 @@
     }
   }
 
+  &.drop-up {
+    > .dropdown-menu {
+      top: auto;
+      bottom: 100%;
+      margin-top: 0;
+      margin-bottom: 6px;
+      transform: translateY(8px);
+    }
+
+    &.active > .dropdown-menu {
+      transform: translateY(0);
+    }
+  }
+
   .dropdown-menu {
     position: absolute;
     top: 100%;
